Ammended commit